test/negative/feature_unicodeinput.java

public class feature_unicodeinput {
  public feature_unicodeinput() {}
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}

